# rust-bot-template

./: Cargo.toml  LICENSE  README.md
src/: client.rs  main.rs
