[package]
name = "rust-bot"
version = "0.2.0"
edition = "2018"
license = "MIT"


[dependencies]
tokio={ version = "1.10", features = ["full"] }
dotenv = "0.15"

[dependencies.serenity]
default-features=false
features=[
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "rustls_backend",
    "cache",
    "voice",
]

version="0.10"